modified:   about.html

--- a/about.html
+++ b/about.html
@@ -24,8 +24,8 @@
 				<ul id="menu-main" class="menu">
 					<li id="menu-item-8" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8"><a href="/">Главная</a></li>
 					<li id="menu-item-19" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-16 current_page_item menu-item-19"><a href="/about.html">О компании</a></li>
-					<li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30"><a href="/services.html">Наши услуги</a></li>
-					<li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a href="/clients.html">Клиенты</a></li>
+					<li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30"><a href="/okko/services.html">Наши услуги</a></li>
+					<li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a href="/okko/clients.html">Клиенты</a></li>
 					<li id="menu-item-45" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-45"><a href="/documents.html">Документы</a></li>
 					<li id="menu-item-48" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-48"><a href="/team.html">Команда</a></li>
 					<li id="menu-item-51" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-51"><a href="/jobs.html">Вакансии</a></li>
