modified:   about.html

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 		<div id="main_menu" class="nav_container horizontal">
 			<div class="menu-main-container">
 				<ul id="menu-main" class="menu">
-					<li id="menu-item-8" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8"><a href="/">Главная</a></li>
+					<li id="menu-item-8" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8"><a href="/okko">Главная</a></li>
 					<li id="menu-item-19" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-16 current_page_item menu-item-19"><a href="/okko/about.html">О компании</a></li>
 					<li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30"><a href="/okko/services.html">Наши услуги</a></li>
 					<li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a href="/okko/clients.html">Клиенты</a></li>
