modified:   about.html

--- a/about.html
+++ b/about.html
@@ -59,13 +59,13 @@
 			<div>
 				<table id="footer_nav">
 					<tr>
-						<td><a href="/about.html"><img src="style/a-okko/images/nav/prt_1.png"><span class="text">О компании</span></a></td>
-						<td><a href="/services.html"><img src="style/a-okko/images/nav/prt_2.png"><span class="text">Наши услуги</span></a></td>
-						<td><a href="/clients.html"><img src="style/a-okko/images/nav/prt_3.png"><span class="text">Клиенты</span></a></td>
-						<td><a href="/documents.html"><img src="style/a-okko/images/nav/prt_4.png"><span class="text">Документы</span></a></td>
-						<td><a href="/team.html"><img src="style/a-okko/images/nav/prt_5.png"><span class="text">Команда</span></a></td>
-						<td><a href="/jobs.html"><img src="style/a-okko/images/nav/prt_6.png"><span class="text">Вакансии</span></a></td>
-						<td><a href="/contacts.html"><img src="style/a-okko/images/nav/prt_7.png"><span class="text">Контакты</span></a></td>
+						<td><a href="/okko/about.html"><img src="style/a-okko/images/nav/prt_1.png"><span class="text">О компании</span></a></td>
+						<td><a href="/okko/services.html"><img src="style/a-okko/images/nav/prt_2.png"><span class="text">Наши услуги</span></a></td>
+						<td><a href="/okko/clients.html"><img src="style/a-okko/images/nav/prt_3.png"><span class="text">Клиенты</span></a></td>
+						<td><a href="/okko/documents.html"><img src="style/a-okko/images/nav/prt_4.png"><span class="text">Документы</span></a></td>
+						<td><a href="/okko/team.html"><img src="style/a-okko/images/nav/prt_5.png"><span class="text">Команда</span></a></td>
+						<td><a href="/okko/jobs.html"><img src="style/a-okko/images/nav/prt_6.png"><span class="text">Вакансии</span></a></td>
+						<td><a href="/okko/contacts.html"><img src="style/a-okko/images/nav/prt_7.png"><span class="text">Контакты</span></a></td>
 					</tr>
 					</tr>
 				</table>
