--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 
 	<body >
 		<div id="header" >
-		<a href="/"><img src="style/a-okko/images/logo.png"></a>
+		<a href="/okko"><img src="style/a-okko/images/logo.png"></a>
 		<p class="phone">+7 (499) 272-19-27</p>
 		</div>
 		<div id="main_menu" class="nav_container horizontal">
