--- a/jobs.html
+++ b/jobs.html
@@ -15,20 +15,20 @@
 
 	<body >
 		<div id="header" >
-		<a href="/"><img src="style/a-okko/images/logo.png"></a>
+		<a href="/okko"><img src="style/a-okko/images/logo.png"></a>
 		<p class="phone">+7 (499) 272-19-27</p>
 		</div>
 		<div id="main_menu" class="nav_container horizontal">
 			<div class="menu-main-container">
 				<ul id="menu-main" class="menu">
-					<li id="menu-item-8" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8"><a href="/">Главная</a></li>
-					<li id="menu-item-19" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a href="/about.html">О компании</a></li>
-					<li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30"><a href="/services.html">Наши услуги</a></li>
-					<li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a href="/clients.html">Клиенты</a></li>
-					<li id="menu-item-45" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-45"><a href="/documents.html">Документы</a></li>
-					<li id="menu-item-48" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-48"><a href="/team.html">Команда</a></li>
-					<li id="menu-item-51" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-49 current_page_item menu-item-51"><a href="/jobs.html">Вакансии</a></li>
-					<li id="menu-item-75" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-75"><a href="/contacts.html">Контакты</a></li>
+					<li id="menu-item-8" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-8"><a href="/okko">Главная</a></li>
+					<li id="menu-item-19" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-16 current_page_item menu-item-19"><a href="/okko/about.html">О компании</a></li>
+					<li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30"><a href="/okko/services.html">Наши услуги</a></li>
+					<li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-33"><a href="/okko/clients.html">Клиенты</a></li>
+					<li id="menu-item-45" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-45"><a href="/okko/documents.html">Документы</a></li>
+					<li id="menu-item-48" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-48"><a href="/okko/team.html">Команда</a></li>
+					<li id="menu-item-51" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-51"><a href="/okko/jobs.html">Вакансии</a></li>
+					<li id="menu-item-75" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-75"><a href="/okko/contacts.html">Контакты</a></li>
 				</ul>
 			</div>	
 		</div>
@@ -73,13 +73,13 @@
 			<div>
 				<table id="footer_nav">
 					<tr>
-						<td><a href="/about.html"><img src="style/a-okko/images/nav/prt_1.png"><span class="text">О компании</span></a></td>
-						<td><a href="/services.html"><img src="style/a-okko/images/nav/prt_2.png"><span class="text">Наши услуги</span></a></td>
-						<td><a href="/clients.html"><img src="style/a-okko/images/nav/prt_3.png"><span class="text">Клиенты</span></a></td>
-						<td><a href="/documents.html"><img src="style/a-okko/images/nav/prt_4.png"><span class="text">Документы</span></a></td>
-						<td><a href="/team.html"><img src="style/a-okko/images/nav/prt_5.png"><span class="text">Команда</span></a></td>
-						<td><a href="/jobs.html"><img src="style/a-okko/images/nav/prt_6.png"><span class="text">Вакансии</span></a></td>
-						<td><a href="/contacts.html"><img src="style/a-okko/images/nav/prt_7.png"><span class="text">Контакты</span></a></td>
+						<td><a href="/okko/about.html"><img src="style/a-okko/images/nav/prt_1.png"><span class="text">О компании</span></a></td>
+						<td><a href="/okko/services.html"><img src="style/a-okko/images/nav/prt_2.png"><span class="text">Наши услуги</span></a></td>
+						<td><a href="/okko/clients.html"><img src="style/a-okko/images/nav/prt_3.png"><span class="text">Клиенты</span></a></td>
+						<td><a href="/okko/documents.html"><img src="style/a-okko/images/nav/prt_4.png"><span class="text">Документы</span></a></td>
+						<td><a href="/okko/team.html"><img src="style/a-okko/images/nav/prt_5.png"><span class="text">Команда</span></a></td>
+						<td><a href="/okko/jobs.html"><img src="style/a-okko/images/nav/prt_6.png"><span class="text">Вакансии</span></a></td>
+						<td><a href="/okko/contacts.html"><img src="style/a-okko/images/nav/prt_7.png"><span class="text">Контакты</span></a></td>
 					</tr>
 					</tr>
 				</table>
